<resources>
    <string name="app_name">RxKotlinDemo</string>
    <string name="base_classes">Base classes</string>
    <string name="single">Single</string>
    <string name="completable">Completable</string>
    <string name="maybe">Maybe</string>
    <string name="observable">Observable</string>
    <string name="flowable">Flowable</string>
    <string name="create_operators">Create Operators</string>
    <string name="filter_operators">Filter operators</string>
    <string name="transformation_operators">Transformation Operators</string>
    <string name="combination_operators">Combination Operators</string>
    <string name="helper_operators">Helper Operators</string>
    <string name="transformation">Transformation</string>
    <string name="create">Create</string>
    <string name="just">Just</string>
    <string name="from_array">FromArray</string>
    <string name="from_iterable">FromIterable</string>
    <string name="interval">Interval</string>
    <string name="range">Range</string>
    <string name="flatmap">FlatMap</string>
    <string name="concat_map">ConcatMap</string>
    <string name="repeat">Repeat</string>
    <string name="input">Input</string>
    <string name="output">Output</string>
    <string name="completed">Completed</string>
    <string name="timer">Timer</string>
    <string name="filter">Filter</string>
    <string name="element_at">ElementAt</string>
    <string name="skip">Skip</string>
    <string name="skip_last">Skip Last</string>
    <string name="distinct">Distinct</string>
    <string name="take">Take</string>
    <string name="take_last">TakeLast</string>
    <string name="take_while">TakeWhile</string>
    <string name="map">Map</string>
    <string name="buffer">Buffer</string>
    <string name="group_by">GroupBy</string>
    <string name="scan">Scan</string>
    <string name="debounce">Debounce</string>
    <string name="switch_map">SwitchMap</string>
    <string name="zip_with">zipWith</string>
    <string name="merge_with">mergeWith</string>
    <string name="combine_latest">combineLatest</string>
    <string name="concat_with">concatWith</string>
    <string name="all">all</string>
    <string name="contains">contains</string>
    <string name="delay">delay</string>
    <string name="default_if_empty">DefaultIfEmpty</string>
    <string name="time_interval">TimeInterval</string>
    <string name="time_stamp">TimeStamp</string>
    <string name="time_out">TimeOut</string>
</resources>